# rpaframework-msgraph

./: .gitignore  README.rst  pyproject.toml  tasks.py  tasks_common.py
src/RPA/: MSGraph.py
tests/python/: test_msgraph.py
